Fix: SNL Rule Selection - Reimplemented dice choice - SNLRuleModel now reads of JSON to determine modifier count